plugins {
    id "java"
    id "org.springframework.boot" version "3.0.2"
    id "io.spring.dependency-management" version "1.1.0"
}

group = "cn.shmedo.monitor"


version = "0.0.1-SNAPSHOT"
sourceCompatibility = "17"

ext {
    javaVersion = "17"
    springbootVersion = "3.0.0"
    nacosConfigVersion = "0.2.12"
    influxdbVersion = "2.16"
    mysqlConnectorVersion = "8.0.32"
    druidVersion = "1.2.16"
    iotEntityVersion = '1.0.62'
    hutoolVersion = "5.8.12"
    mybatisPlusVersion = "3.5.3.1"
    openFeignVersion = "12.0"
    mathParserVersion = "5.1.0"
    rsApiVerison = "2.1"
    lombokVersion = "1.18.26"
    junitVersion = "4.13.1"
    mathParserVersion = "5.1.0"
    jedisVersion = "3.7.0"
    lettuceVersion = "6.2.2.RELEASE"
    feignFormVersion = "3.8.0"
}

repositories {
    maven { url "https://maven.aliyun.com/repository/public/" }
    mavenCentral()
    maven {
        url "http://nexus.shmedo.cn/repository/maven-releases/"
        allowInsecureProtocol true
        credentials {
            username = "medo_ldd"
            password = "medo420529"
        }
    }
}

dependencies {
    implementation "org.springframework.boot:spring-boot-starter"
    implementation "org.springframework.boot:spring-boot-starter-validation"
    implementation "org.springframework.boot:spring-boot-starter-web"
    implementation "org.springframework.boot:spring-boot-starter-aop"
    implementation "org.springframework.boot:spring-boot-starter-jdbc"
    implementation "org.springframework.data:spring-data-redis:$springbootVersion"
    implementation "org.influxdb:influxdb-java:$influxdbVersion"
    implementation "com.mysql:mysql-connector-j:$mysqlConnectorVersion"
    implementation "com.alibaba:druid:$druidVersion"
    implementation "redis.clients:jedis:$jedisVersion"
    implementation "io.lettuce:lettuce-core:$lettuceVersion"

    implementation "com.alibaba:druid-spring-boot-starter:$druidVersion"
    implementation "com.baomidou:mybatis-plus-boot-starter:$mybatisPlusVersion"
    implementation "com.baomidou:mybatis-plus-extension:$mybatisPlusVersion"
    implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:$springbootVersion"
    implementation "com.alibaba.boot:nacos-config-spring-boot-starter:$nacosConfigVersion"
    implementation "cn.shmedo.iot:entity:$iotEntityVersion"


    implementation "io.github.openfeign:feign-core:$openFeignVersion"
    implementation "io.github.openfeign:feign-jackson:$openFeignVersion"
    implementation "io.github.openfeign:feign-okhttp:$openFeignVersion"
    implementation "io.github.openfeign:feign-hystrix:$openFeignVersion"
    implementation "io.github.openfeign.form:feign-form:$feignFormVersion"
    implementation "io.github.openfeign.form:feign-form-spring:$feignFormVersion"
    testImplementation "org.projectlombok:lombok:$lombokVersion"

    implementation "javax.ws.rs:javax.ws.rs-api:$rsApiVerison"
    implementation "org.mariuszgromada.math:MathParser.org-mXparser:$mathParserVersion"

    compileOnly "org.projectlombok:lombok"
    annotationProcessor "org.projectlombok:lombok"
    implementation "cn.hutool:hutool-all:$hutoolVersion"
    testImplementation "org.springframework.boot:spring-boot-starter-test"
    testImplementation "junit:junit:$junitVersion"
}

tasks.named("test") {
    useJUnitPlatform()
}
